--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,3 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-dark mb-3">
-    <a class="navbar-brand" routerLink="/" routerLinkActive="active" style="color: aliceblue;">NgCart</a>
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-            
-          <div>
-            <!-- <a class="nav-link" routerLink="/products/cart" 
-            routerLinkActive="active"
-            >
-          </a> -->
-          </div>
-        </li>
-      </ul>
-</nav>
+<app-navbar></app-navbar>
 
-    <router-outlet></router-outlet>
+<router-outlet></router-outlet>
