--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,5 +1,4 @@
 <div class="row">
-
   <div class="containere checkout mt-3 col-6 ">
     <h1>Checkout</h1>
   
@@ -8,10 +7,9 @@
     <div *ngIf="buyChekOut[0].length == 0">
       <p > Aun no tienes productos acá!</p>
     </div>
-  
+
     <div *ngFor="let item of buyFiltered;" class="">
       
-  
         <div class="">
   
           {{ item.name }}
@@ -19,13 +17,11 @@
     
           <i class="far fa-trash-alt ml-3" (click)="delete(i)" (click)="calculateTotal()"></i>
     
-  
         </div>
-  
     </div>
   
   
-  <h3 class="mt-3" > Total  {{ totalSum }}  </h3>  
+  <h3 class="mt-3" *ngIf="buyChekOut[0].length > 0"> Total  {{ totalSum }}  </h3>  
   
   </div>
   
@@ -37,10 +33,9 @@
 
 </div>
 
-
 <br><br><br>
 
-
+<!-- 
 <div class="row ">
 
   <div class="  ml-5 checkoutBox">
@@ -82,7 +77,14 @@
 
   </div>
 
+</div> -->
+
+<div class="credit-card" style="width:300px">
+<div>
+  <div #cardInfo></div>
+  <div class="error">
+
+  </div>
+  </div>
+  <button class="btn btn-dark ml-5" (click)="onClick()">PAGAR</button>
 </div>
-
-
-<br><br><br>
