--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,151 +1,163 @@
-<div class="container">
-  <div class="cardSHop" >
+<div class="container ">
 
-    <i class="fas fa-user mr-3"></i>
-    <i class="fas fa-envelope mr-3"></i>
-    <a href="#" [routerLink]="['/cart']"><i class="fas fa-shopping-cart ">  </i> </a> 
-    <p id="cartNumber" class="mt-1 ml-1">{{cart2.length}}</p> 
-  
-  </div>
-  
-  
-    <div class="card-group text-center mt-3 ">
-      <div class="card h-100" style="">
-        <img class="card-img-top  " 
-        src="https://www.lenovo.com/medias/?context=bWFzdGVyfHJvb3R8NDU3MjI4fGltYWdlL3BuZ3xoZGIvaDk1LzExMTM5MDAyODkyMzE4LnBuZ3w1MGMwMGY5ZmYwOGExM2EwMzFhOGJkZTY3YWI3NDYzMmU0NTkwNGU2ZDRlMTRhN2NhOTkxMTI0MmZjYTdkMDcx" 
-        alt="Card image cap" #refImage1>
-        <div class="card-body">
-          <h5 class="card-title" #refName1>Dell Inspiron N15R</h5>
-          <p class="card-text" #refPrice1>40.000</p>
-          <button class="btn btn-dark btn-block" (click)="openNav(refName1, refPrice1, refImage1)">Buy Now</button>
-  
-        </div>
-      </div>
-      <div class="card h-100 " style="">
+  <div class="card-group text-center mt-3 ">
+
+      <div class="card" >
+        <a href="" (click)="openNav(refName1, refPrice1, refImage1)">
+          <img class="card-img-top  " 
+          src="https://www.lenovo.com/medias/lenovo-laptop-ideapad-3-15-intel-hero.png?context=bWFzdGVyfHJvb3R8MzAzNDQ1fGltYWdlL3BuZ3xoNjYvaDY2LzEwNzU3MjQxNTAzNzc0LnBuZ3xjMzU3NWY4OGEyYjYzYTEwOGFlYzhiNWJhODEwYzA1MTlkNDYxODI3ZGQxM2IzYTRhYmY4M2YzY2NjYjhhOGJj" 
+          alt="Card image cap" #refImage1>
+          <div class="card-body">
+            <h5 class="card-title" #refName1>Dell Inspiron N15R</h5>
+            <p class="card-text" #refPrice1>40.000</p>
+          </div>
+        </a>
+     </div>
+
+
+      <div class="card  " style="">
+        <a href="" (click)="openNav(refName2, refPrice2, refImage2)">
         <img class="card-img-top" 
         src="https://www.lenovo.com/medias/lenovo-laptop-thinkpad-t490-hero-1126.png?context=bWFzdGVyfHJvb3R8Nzg4OTN8aW1hZ2UvcG5nfGg5Ni9oYTcvMTA2NzMyMDYyNjM4MzgucG5nfDllOTUyNGM1OGYxNjkxNGU2ZTMxNWQxMTE1NDQ0MGZkNDU4ZWYwOWExZWZjMDJkMDRiZTIwYjc0OGE5NGUwMzA" 
         alt="Card image cap" #refImage2>
         <div class="card-body">
-          <h5 class="card-title" #refName2>HP Elitebook E840</h5>
+          <h5 class="card-title" #refName2>Thinkpad Lenovo T430</h5>
           <p class="card-text" #refPrice2>42.000</p>
-            <button class="btn btn-dark btn-block" (click)="openNav(refName2, refPrice2, refImage2)">Buy Now</button>
         </div>
-        
+      </a>        
       </div>
+
+
       <div class="card " style="">
+        <a href="" (click)="openNav(refName3, refPrice3, refImage3)" >
             <img class="card-img-top " 
             src="https://static.acer.com/up/Resource/Acer/Laptops/Aspire_3/images/20200330/Acer-Aspire-3_A315-23-23G_Silver_modelmain.png" 
             alt="Card image cap" #refImage3>
             <div class="card-body">
-              <h5 class="card-title" #refName3>Dell Inspiron N15R</h5>
+              <h5 class="card-title" #refName3>Acer Yu900</h5>
               <p class="card-text" #refPrice3>52.000</p>
-              <button class="btn btn-dark btn-block" (click)="openNav(refName3, refPrice3, refImage3)" >Buy Now</button>
             </div>
-      </div>
+          </a>
+        </div>
+
       <div class="card " style="">
+        <a href="" (click)="openNav(refName4, refPrice4, refImage4)">
               <img class="card-img-top" 
-              src="https://images-na.ssl-images-amazon.com/images/I/61PGMP8d5PL._SX425_.jpg" 
+              src="https://nano-loo.com/wp-content/uploads/2021/07/Laptop-hp-250-g8-i7.png" 
               alt="Card image cap" #refImage4>
               <div class="card-body">
                 <h5 class="card-title" #refName4>HP Elitebook E840</h5>
                 <p class="card-text" #refPrice4>62.000</p>
-                <button  class="btn btn-dark btn-block" (click)="openNav(refName4, refPrice4, refImage4)">Buy Now</button>
               </div>
+            </a>
+            </div>
+
+      <div class="card " style="">
+        <a href=""  (click)="openNav(refName5, refPrice5, refImage5)">
+        <img class="card-img-top" 
+        src="https://cdn-3.expansion.mx/c1/06/f9b54bba43e8ac187d3c6a6c899b/gx550-c04-v6-light.0.png" 
+        alt="Card image cap" #refImage5>
+        <div class="card-body">
+          <h5 class="card-title" #refName5>MSI Dragon 907</h5>
+          <p class="card-text" #refPrice5>90.000</p>
+        </div>
+      </a>
       </div>
+
   
   </div>
 
   <div class="card-group mt-5 text-center"> 
   
-        <div class="card  " style="width: 18rem;">
+        <div class="card " style="">
+          <a href="" (click)="openNav(refName6, refPrice6, refImage6)">
           <img class="card-img-top" 
-          src="https://hiraoka.com.pe/media/mageplaza/blog/post/l/a/Laptop_Asus_Vivobook_14__Ryzen_5.jpg" 
-          alt="Card image cap" #refImage5>
-          <div class="card-body">
-            <h5 class="card-title" #refName5>HP Elitebook E840</h5>
-            <p class="card-text" #refPrice5>70.000</p>
-            <button class="btn btn-dark btn-block" (click)="openNav(refName5, refPrice5, refImage5)">Buy Now</button>
-          </div>
-          
-        </div>
-  
-        <div class="card " style="width: 18rem;">
-          <img class="card-img-top" 
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQRHqIR7PfEJC7VcAavCz8ckMY-2I_fLktKw&usqp=CAU" 
+          src="https://cl.buscafs.com/www.levelup.com/public/uploads/images/676400/676400.png" 
           alt="Card image cap" #refImage6>
           <div class="card-body">
-            <h5 class="card-title" #refName6>HP compaq CQ40</h5>
-            <p class="card-text" #refPrice6>38.000</p>
-            <button class="btn btn-dark btn-block" (click)="openNav(refName6, refPrice6, refImage6)">Buy Now</button>
+            <h5 class="card-title" #refName6>Lenovo Yoga 7y90</h5>
+            <p class="card-text" #refPrice6>76.000</p>
           </div>
+        </a>
           
         </div>
   
-  
-        <div class="card " style="width: 18rem;">
+        <div class="card " style="">
+          <a href="" (click)="openNav(refName7, refPrice7, refImage7)">
           <img class="card-img-top" 
-          src="https://www.nvidia.com/content/dam/en-zz/Solutions/geforce/ces/gaming-laptops/geforce-rtx-30-series-laptops-shop-630-d@2x.png" 
+          src="https://i.pcmag.com/imagery/articles/059u7uHTgC4IN4TpkKxzVm2-11..1592841202.png" 
           alt="Card image cap" #refImage7>
           <div class="card-body">
-            <h5 class="card-title" #refName7>Dell latitude 5430</h5>
-            <p class="card-text" #refPrice7>33.000</p>
-            <button  class="btn btn-dark btn-block" (click)="openNav(refName7, refPrice7, refImage7)">Buy Now</button>
+            <h5 class="card-title" #refName7>Alienware 7890</h5>
+            <p class="card-text" #refPrice7>150.000</p>
           </div>
-          
+        </a>
         </div>
   
   
-        <div class="card " style="width: 18rem;">
+        <div class="card " style="">
+          <a href="" (click)="openNav(refName8, refPrice8, refImage8)">
           <img class="card-img-top" 
-          src="https://siman.vtexassets.com/arquivos/ids/1232773-600-auto?width=600&height=auto&aspect=true" 
-          alt="Card image cap"
-          #refImage8>
+          src="https://d7qztf2ityad6.cloudfront.net/20159/20159_pictures_product_visual_3.png?f=RM1920,800" 
+          alt="Card image cap" #refImage8>
           <div class="card-body">
-            <h5 class="card-title" #refName8>Lenovo Thinkpad i7</h5>
-            <p class="card-text" #refPrice8>62.000</p>
-            <button  class="btn btn-dark btn-block" (click)="openNav(refName8, refPrice8, refImage8)">Buy Now</button>
+            <h5 class="card-title" #refName8>MSI k700</h5>
+            <p class="card-text" #refPrice8>120.000</p>
           </div>
-          
+        </a>
         </div>
   
+  
+        <div class="card " style="">
+          <a href="" (click)="openNav(refName9, refPrice9, refImage9)">
+          <img class="card-img-top" 
+          src="https://cdn.cliffyb.com/wp-content/uploads/2019/12/Gaming-Laptop-Under-800.png" 
+          alt="Card image cap"
+          #refImage9>
+          <div class="card-body">
+            <h5 class="card-title" #refName9>MSI HTGB ZONER</h5>
+            <p class="card-text" #refPrice9>62.000</p>
+          </div>
+          </a>
+        </div>
+
+
+        <div class="card " style="">
+        <a href="" (click)="openNav(refName10, refPrice10, refImage10)" >
+        <img class="card-img-top" 
+        src="https://i2.wp.com/www.madboxpc.com/wp-content/uploads/2019/10/ZenBook-Pro-15_UX581_Product-photo_ScreenPad-Plus-01.png?resize=1000%2C1000&ssl=1" 
+        alt="Card image cap" #refImage10>
+        <div class="card-body">
+          <h5 class="card-title" #refName10>HP GrandView 4567</h5>
+          <p class="card-text" #refPrice10>62.000</p>
+        </div>
+      </a> 
+    </div>
   </div>
 
 
+  <br><br><br> 
 
-  
-  <div class="container mt-3 text-center">
-    <a href="#" class="btn btn-dark mt-5" [routerLink]="['/cart']">Realizar compra</a>
-  </div>
-  
-<br><br><br>
-  
-   <div id="mySidebar" class="sidebar text-center">
+
+<!-- SIDEBAR -->
+<div id="mySidebar" class="sidebar text-center">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
     <a href="#" #refName>{{ titleSideShoppingCart }}</a>
-    <a href="#"  #refPrice class="my-2">{{ priceSideShoppingCart }} $</a>
-    <img class="text-center" src="{{ imgSideShoppingCart }}" alt="" style="width: 80%; height: 35%;">
+    <a href="#"  #refPrice>{{ priceSideShoppingCart }} $</a>
+    <img class="text-center" src="{{ imgSideShoppingCart }}" alt="" style="width: 200px; height: 180;">
   
-    <div class="row text-center">
   
       <div class="col-12 mt-3 d-flex justify-content-center">
-        <button class="btn btn-dark  mx-3" (click)="less()" >  - </button>
-  
-            <p class="mt-3 numberCart">    {{  number }}      </p> 
-    
-          <button class="btn btn-dark mx-3" (click)="more()" >  + </button>
+        <button class="btn btn-dark btnLess mx-2" (click)="less()"> - </button>
+        <p class=" numberCart">    {{  number }}      </p> 
+        <button class="btn btn-dark btnMore mx-2" (click)="more()" > + </button>
       </div>
-  
-    </div>
-  
-    <button class="btn btn-dark mt-5 text-center" data-toggle="modal" data-target="#exampleModal" 
+
+    
+    <button class="btn btn-dark  mt-5" data-toggle="modal" data-target="#exampleModal" 
     (click)="buyNow(refName, refPrice)" >Añadir al carro</button>
   
-  </div>
-
-
-
-
-
+</div>
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
@@ -160,7 +172,6 @@
         ¡Añadido al carro!
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeModal()">Close</button>
       </div>
     </div>
   </div>
